tests/compile_fail/state/no_superstate_parens.stderr
error: the `moku::superstate` attribute requires a single State name as an argument, e.g. `#[superstate(Top)]`
  --> tests/compile_fail/state/no_superstate_parens.rs:17:5
   |
17 |     #[superstate]
   |     ^
